<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/action_list"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_note_add_24"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/menu_list"
        android:id="@+id/menu_main_list"/>
    <item
        android:title="@string/menu_active"
        android:id="@+id/menu_main_active"/>
    <item
        android:title="@string/menu_visible"
        android:id="@+id/menu_main_visible"/>
    <item
        android:title="@string/menu_widget"
        android:id="@+id/menu_main_widget"/>
    <item
        android:title="@string/menu_add"
        android:id="@+id/menu_main_add"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never"/>

</menu>